# ipa-toolkit

./: LICENSE  README.md  ipa_toolkit.py  pyproject.toml
src/ipa_toolkit/: __init__.py  __main__.py  bundle_scan.py  cli.py  codesign.py  entitlements.py  inspect.py  ipa.py  pipeline_utils.py  plist_edit.py  plist_ops.py  plist_path.py  provisioning.py  types.py
tests/: conftest.py  test_apply_ops.py  test_bundle_scan.py  test_cli.py  test_entitlements_adjust.py  test_entitlements_build.py  test_entitlements_validation.py  test_inspect.py  test_main_app_select.py  test_pipeline_integration.py  test_pipeline_utils.py  test_plist_edit.py  test_plist_path.py  test_provisioning.py
